--- a/web/package.json
+++ b/web/package.json
@@ -16,12 +16,12 @@
     "react-router-dom": "^6.4.4"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
-    "openmobile": "^1.0.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.6.4",
